# stereo-dso

./: CMakeLists.txt  dependencies.cmake  package.xml
cmake/: options.cmake
cmake/modules/: opencv.cmake
config/: common.yaml
launch/: zed2_2dmapping.launch  zed2_localization.launch  zed2_odometry.launch
rviz/: zed2_config.rviz  zed2_loc_config.rviz
src/: main_dso_pangolin.cpp  stereo_dso_ros.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/ROSWrapper/: ROSOutputWrapper.cpp  ROSOutputWrapper.h
src/util/: DatasetReader.h  FrameShell.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
